--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 /*Navbar*/
@@ -13,19 +12,15 @@
 }
 .logo {
   float: right;
-  margin-right: 15px;
-  margin-top: 5px;
+  margin-right: 45px;
+  margin-top: 15px;
 }
-.logo i {
-  color: #fff;
-  margin-top: 5px;
-  font-size: 45px;
-}
+
 .menu-link {
   width: 100%;
   list-style: none;
   background: #ff4a44;
-  height: 75px;
+  height: 100px;
 }
 .menu-link li {
   display: inline-block;
@@ -38,12 +33,11 @@
   text-decoration: none;
   padding: 10px 7px;
   transition: 0.5s;
-  font-size: 32px;
+  font-size: 50px;
   margin-left: 40px;
   top: 10px;
 }
-.menu-link a:hover,
-.logo i:hover {
+.menu-link a:hover {
   color: #142440;
 }
 .menu-link li a::after {
@@ -68,19 +62,19 @@
 }
 .main-container h1 {
   text-align: center;
-  font-size: 50px;
+  font-size: 80px;
 }
 
 .main-container p {
   text-align: justify;
   margin-top: 20px;
-  font-size: 24px;
+  font-size: 32px;
 }
 
 /*Footer*/
 footer {
   width: 100%;
-  height: 75px;
+  height: 90px;
   background: black;
   position: fixed;
   color: #fff;
